# evtol-tools

./: .gitignore  LICENSE  POLICIES.md  README.md  general.ipynb  pyproject.toml
.github/workflows/: ci.yml  docs.yml  tests.yml
docs/: conf.py  index.md
docs/api/: index.md  units.md
docs/api/common/: index.md
docs/api/common/units/: base.md  config.md  index.md  quantities.md  registry.md
evtoltools/: __init__.py
evtoltools/common/: __init__.py  atmosphere.py  base.py  config.py  registry.py
evtoltools/common/atmosphere/: __init__.py  altitude.py  isa.py
evtoltools/common/quantities/: __init__.py  angular_velocity.py  area.py  capacity.py  current.py  density.py  energy.py  force.py  frequency.py  length.py  luminosity.py  mass.py  moment.py  power.py  pressure.py  substance.py  temperature.py  time.py  velocity.py  voltage.py  volume.py
evtoltools/common/units/: __init__.py  base.py  config.py  registry.py
evtoltools/common/units/quantities/: __init__.py  angular_velocity.py  area.py  capacity.py  current.py  density.py  energy.py  force.py  frequency.py  length.py  luminosity.py  mass.py  moment.py  power.py  pressure.py  resistance.py  substance.py  temperature.py  time.py  velocity.py  voltage.py  volume.py
evtoltools/components/: __init__.py  avionics.py  base.py  payload.py  structure.py
evtoltools/components/battery/: __init__.py  battery.py  chemistry.py  discharge.py  pybamm_utils.py  thermal.py
evtoltools/components/battery/tables/: __init__.py  discharge_lithium_ion.npz
evtoltools/components/propulsion/: __init__.py  motor.py  propeller.py  propulsion.py
evtoltools/data/: __init__.py  discharge_lithium_ion.npz
examples/: atmosphere_showcase.ipynb  battery_showcase.ipynb  discharge_curve_comparison.ipynb  quantities_showcase.ipynb  vehicle_weight_calculator.py
src/evtol_tools/: __init__.py
src/evtol_tools/units/: __init__.py  base.py  quantities.py  registry.py
src/evtoltools/: __init__.py
src/evtoltools/common/: __init__.py
src/evtoltools/common/units/: __init__.py  base.py  config.py  quantities.py  registry.py
tests/: conftest.py  test_atmosphere.py  test_base.py  test_battery.py  test_components_simple.py  test_discharge.py  test_mass.py  test_pressure_frequency.py  test_propulsion.py  test_propulsion_atmosphere.py  test_quantities_new.py  test_quantity_operations.py  test_resistance.py  test_thermal.py  test_units_base.py  test_units_quantities.py  test_vehicle_weight_calculator.py
utils/: generate_discharge_lookup_tables.py
