[project]
name = "evtol-tools"
version = "0.1.0"
description = "eVTOL vehicle configuration, sizing, and mission analysis tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "RCAIDE-LEADS>=1.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "pint>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.9",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-q"]
markers = [
    "slow: tests that take more than 5 seconds",
    "integration: tests requiring full RCAIDE mission evaluation",
]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["evtoltools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
